--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME='NFQ task'
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://nfq-task.test
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
