--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ npm-debug.log
 yarn-error.log
 /.idea
 /.vscode
+/public/adminer.php
+/public/mix-manifest.json
+/public/js/app.js
+/public/css/app.css
